# kosis

./: .gitignore  LICENSE  README.md  pyproject.toml
kosis/: __init__.py  kosis.py
scripts/: build_package.sh
tests/: test_kosis.py
